# gcf-data-mapper

./: .cruft.json  .git-blame-ignore-revs  .gitignore  DEVELOPER.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci-cd.yml  release.yml
.trunk/: configure-pyright.sh  trunk.yaml
.trunk/configs/: _typos.toml  cspell.json
gcf_data_mapper/: cli.py  read.py
gcf_data_mapper/enums/: document.py  event.py  family.py
gcf_data_mapper/parsers/: collection.py  document.py  event.py  family.py  helpers.py
infra/: Pulumi.yaml  __main__.py
tests/: test_say_hi.py
tests/integration_tests/: test_cli.py  test_commands.py
tests/unit_tests/: test_cli.py  test_read_data.py  test_say_hi.py
tests/unit_tests/fixtures/: invalid_climate_csv_data.csv  malformed_data.json  test_text_file.txt  valid_climate_csv_data.csv  valid_climate_csv_data_2_records.csv  valid_climate_json_data.json
tests/unit_tests/parsers/: conftest.py
tests/unit_tests/parsers/collection/: test_collection.py
tests/unit_tests/parsers/document/: conftest.py  test_document.py  test_map_document_data.py  test_map_translated_files.py  test_process_row.py  test_url_validation.py
tests/unit_tests/parsers/event/: conftest.py  test_append_event.py  test_check_event_dates.py  test_event.py  test_initialise_event_counter.py  test_process_event.py
tests/unit_tests/parsers/family/: conftest.py  test_family.py  test_map_family.py  test_map_family_metadata.py
tests/unit_tests/parsers/helpers/: test_has_required_fields.py  test_helpers.py  test_verify_required_fields_present.py
tests/unit_tests/read/: conftest.py  test_read.py  test_read_csv.py  test_read_data.py  test_read_data_into_pandas.py  test_read_into_pandas.py  test_read_json.py
tests/unit_tests/test_fixtures/: invalid_climate_csv_data.csv  invalid_climate_json_data.json  test.py  test_country_climate_data.json  test_non_csv_json_file.py  valid_climate_csv_data.csv  valid_climate_json_data.json
