[tool.poetry]
name = "gcf-data-mapper"
version = "0.1.17"
description = "A CLI tool to wrangle GCF data into format recognised by the bulk-import tool."
authors = ["CPR-dev-team <tech@climatepolicyradar.org>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "gcf_data_mapper" }]

[tool.poetry.dependencies]
python = ">=3.10"
click = "^8.1.7"
pandas = "^2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"

[tool.poetry.scripts]
gcf_data_mapper = "gcf_data_mapper.cli:entrypoint"

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venv = "gcf-dm"
